Fix header coat of arms alignment.

--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -39,6 +39,7 @@
 .legend div img {
   width: 24px;
   height: 24px;
+  padding-right: 0.25rem;
 }
 
 img.preview:hover {
@@ -49,6 +50,7 @@ img.preview:hover {
   transform-origin: left top;
   transform: scale(7, 7);
   padding: 0.2rem 0.1rem 0.1rem 0.1rem;
+  z-index: 999;
 }
 .captioned > div {
   margin: 0.25rem 0.5rem;
